--- a/main.css
+++ b/main.css
@@ -1,17 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Ms+Madi|Josefin+Sans:300,400|Aboreto');
+@import url('https://fonts.googleapis.com/css?family=Poiret+One|La+Belle+Aurore|WindSong|Italiana|Qwitcher+Grypen:400,700|Allura|Josefin+Sans:100,200,300');
 
 /*Oswald|Marcellus|Bodoni+Moda|Italiana|Antic+Didone|Cormorant+SC|Noto+Serif+Display|Licorice|Meow+Script|Allura|Alex+Brush*/
 
 :root {
-    --main-text-color: #444;
-    --peach-color: #ffd5cb;
-    --forest-color: #203123;
-    --leaf-color: #56612f;
-    --white-color: #fafafa;
-    --gold-color: #d7c791;
-    --teal-color: #8f9f91;
-    --skin-color: #f6e6e1;
-    --cream-color: #fbf1e3;
+    --main-text-color: #3A3C3B;
+    --floral-color: #FFFAF0;
+    --snow-color: #FFFAFA;
+    --brown-safe-color: #cc6600;
+    --gray-color: #3A3C3B;
 }
 
 @viewport{
@@ -22,13 +18,13 @@ html {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     font-weight: 300;
-    color: var(--main-text-color);
+    color: var(--gray-color);
     scroll-behavior: smooth;
 }
 
 body {
     margin: 0 0 0 0;
-    background-image: url("assets/75800-white.jpg");
+    background-color: var(--snow-color);
     background-position: center;
     background-repeat: repeat;
     background-size: contain;
@@ -64,135 +60,30 @@ body {
 /******************/
 
 nav {
-    background-color: var(--white-color);
+    background-color: var(--snow-color);
     overflow: hidden;
     position: fixed;
-    bottom: 0;
-    width: 100%;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
+    left: 0;
+    width: 20%;
+    height: 100%;
+    max-height: 512px;
 }
 
-.menu-list {
+ul {
+    font-family: Poiret One, sans-serif;
+    font-size: 1.5em;
+    list-style-type: none;
     display: flex;
+    flex-direction: column;
     align-items: stretch;
     justify-content: space-between;
-    list-style-type: none;
+    height: 65%;
     text-align: center;
     white-space: nowrap;
-    margin: 0 auto 0 auto;
     padding: 0;
-    width: 75%;
-    max-width: 900px;
-    min-width: 800px;
+    margin: 0;
 }
 
-.menu-list-item {
-    font-size: 1.2em;
-    letter-spacing: 2px;
-    text-align: center;
-    line-height: 50px;
-    padding: 0;
-    min-width: 90px;
-    width: fit-content;
-    margin: 0 1% 0 1%;
-}
-
-.menu-list-item a {
-    display: block;
-    cursor: pointer;
-}
-
-.menu-list-item:hover a {
-    text-decoration: none;
-    color: rgba(153, 153, 153, 1);
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-}
-
- /* Dropup menu button */
-
-.dropbtn {
-    border: none;
-    width: 100%;
-    height: 40px;
-    text-align: center;
-    font-family: 'Josefin Sans', serif;
-    font-weight: 400;
-    font-size: 1.5em;
-    color: var(--main-text-color);
-    background-color: var(--white-color);
-}
-
-.dropup {
-    display: none;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
-}
-
-/* Dropup content (hiddent by default) */
-
-.dropup-content {
-    position: absolute;
-    bottom: 40px;
-    background-color: #f1f1f1;
-    width: 100%;
-    min-width: 160px;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
-    transition: opacity 0.2s ease-out;
-    opacity: 0;
-    height: 0;
-    overflow: hidden;
-}
-
-/* Links inside the dropup */
-
-.dropup-content a.hyperlink {
-  color: black;
-  padding: 12px 16px;
-  font-size: 1.2em;
-  text-decoration: none;
-  text-align: center;
-  display: block;
-}
-
-/* Change color of dropup links on hover */
-
-.dropup-content a.hyperlink:hover {
-    background-color: var(--teal-color);
-    color: var(--white-color);
-}
-
-/* Show the dropup menu on hover */
-
-.dropup:hover .dropup-content{
-  display: block;
-  background-color: var(--white-color);
-      opacity: 1;
-    height: auto;
-}
-
-/* Change the background color of the dropup button when the dropup content is shown */
-
-.dropup:hover .dropbtn{
-  background-color: var(--teal-color);
-  color: var(--white-color);
-} 
-
-@media(min-width: 480px) {
-    .menu-list-item { display: inline-block; }
-    .menu-list-item a { min-width: 90px; }
-}
-
-@media (max-width: 720px) {
-    nav {
-        display: none;
-    }
-    .dropup {
-        display: inline-block;
-    }
-}
 
 /*******************/
 /* Text formatting */
@@ -219,20 +110,20 @@ nav {
 }
 
 h1 {
-    font-family: 'Ms Madi', cursive;
+    font-family: 'La Belle Aurore', cursive;
     font-size: 3em;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: 400;
     text-align: center;
+    line-height: 0.75em;
     text-decoration: none;
 }
 
 h2 {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'La Belle Aurore', cursive;
     font-weight: 400;
-    font-size: 1.4em;
+    font-size: 3em;
     color: var(--main-text-color);
-    letter-spacing: 1px;
 }
 
 h3 {
@@ -424,10 +315,9 @@ a.hyperlink:hover, a.external:hover {
 /************/
 
 .page {
-    text-align: center;
-    width: 75%;
-    max-width: 900px;
-    margin: 100px auto 100px auto;
+    position: absolute;
+    width: 85%;
+    left: 20%;
 }
 
 .content {
