--- a/main.css
+++ b/main.css
@@ -401,6 +401,35 @@ button:active {
     background-color: transparent;
 }
 
+/*******************/
+/* Entourage table */
+/*******************/
+
+.entourage {
+    width: 100%;
+    margin: 0 auto;
+    border-collapse: collapse;
+}
+
+.entourage td {
+    text-align: left;
+    vertical-align: top;
+}
+
+.profile {
+  width: 150px; /* Set the width and height of the profile picture */
+  height: 150px;
+  border-radius: 50%; /* Make the container circular */
+  overflow: hidden; /* Hide any overflow from the image */
+  margin: 10px;
+}
+
+.profile img {
+  display: block;
+  width: 100%; /* Ensure the image fills the circular container */
+  height: auto; /* Maintain aspect ratio */
+}
+
 /**********************/
 /* Schedule of events */
 /**********************/
@@ -411,7 +440,7 @@ button:active {
     border-collapse: collapse;
 }
 
-td {
+.schedule td {
     text-align: left;
     vertical-align: top;
 }
@@ -425,6 +454,7 @@ td {
     margin-right: 20px;
 
 }
+
 /******************/
 /* Party profiles */
 /******************/
