--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@
     --sepia-bg-color: rgba(239, 219, 203, 0.25);
     --pink-color: rgba(249, 204, 202, 0.25);
     --pampas-color: rgb(234, 235, 237);
+    --gold-color: rgb(244, 207, 161);
 }
 
 @viewport{
@@ -63,36 +64,127 @@ body {
 /* Navigation bar */
 /******************/
 
-nav {
-    overflow: hidden;
-    position: fixed;
-    left: 0;
-    width: 20%;
-    height: 100%;
-    max-height: 512px;
-    max-width: 256px;
-    overflow: visible;
-    padding: 0 30px 0 30px;
+.menu-burger > * {
+  position: fixed;
+  right: 20px;
+  bottom: 30px;
 }
 
-ul {
-    font-family: Gloock, serif;
-    font-size: 1.5em;
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: space-between;
-    height: 65%;
-    text-align: left;
-    white-space: nowrap;
+/* Invisible click handler indicating whether menu is collapsed */
+.menu-burger input {
+  height: 32px;
+  margin: 0;
+  opacity: 0;
+  width: 32px;
+  z-index: 4;
+}
+
+/* Burger */
+
+.menu-burger svg {
+  height: 32px;
+  width: 32px;
+  z-index: 3;
+}
+
+/* Menu items */
+
+ul.menu-burger__item-list {
+    font-family: Gloock, sans-serif;
     font-weight: 400;
-    overflow: visible;
-    padding: 0 0 0 20px;
+    font-size: 2em;
+    color: var(--main-text-color);
+    background-color: var(--gold-color);
+    bottom: 0;
+    color: var(--main-text-color);
+    list-style: none;
     margin: 0;
-/*    border: solid;*/
+    padding: 0;
+    top: 0;
+    transform: translate(50vw, 0);
+    transition: transform 0.5s cubic-bezier(0.9, 0, 0.1, 1);
+    width: 50vw;
+    right: 0;
+    z-index: 2;
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    align-items: center;
+    justify-content: center;
+
 }
 
+.list-container {
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    border: solid;
+    text-align: center;
+}
+
+ul.menu-burger__item-list li {
+    vertical-align: middle;
+    margin: 5%;
+}
+
+/* Menu fold-out */
+input:checked ~ .menu-burger__item-list {
+  transform: none;
+}
+
+/* Change line color on fold-out */
+.menu-burger input:checked ~ svg line {
+  stroke: #3c3836;
+}
+
+/* Set transform origins to center of respective line */
+.menu-burger svg line:nth-of-type(1)
+{
+  transform-origin: center 6px;
+}
+
+.menu-burger svg line:nth-of-type(2)
+{
+  transform-origin: center 12px;
+}
+
+.menu-burger svg line:nth-of-type(3)
+{
+  transform-origin: center 18px;
+}
+
+/* Line animations */
+.menu-burger svg line {
+  transition-duration: 0.5s;
+  transition-property:
+    stroke,
+    opacity,
+    transform;
+  transition-timing-function: cubic-bezier(0.9, 0, 0.1, 1);
+}
+
+/* Fade out middle line on fold-out */
+.menu-burger input:checked ~ svg line:nth-of-type(2) {
+  opacity: 0;
+  transform: scale(0.2);
+}
+
+/* Center top and bottom lines vertically, then rotate by 45 degrees in opposing directions on fold-out */
+.menu-burger input:checked ~ svg line:nth-of-type(1)
+{
+  transform: translate(0, 6px) rotate(45deg);
+}
+
+.menu-burger input:checked ~ svg line:nth-of-type(3)
+{
+  transform: translate(0, -6px) rotate(-45deg);
+}
+
+@media (max-width: 768px) {
+    ul.menu-burger__item-list {
+        transform: translate(100vw, 0);
+        width: 100vw;
+    }
+}
 
 /*******************/
 /* Text formatting */
@@ -233,7 +325,7 @@ a.hyperlink:hover, a.external:hover {
     width: 100%;
     height: 100%;
     background-color: rgba(234, 235, 237, 0.6); /* Adjust the last value (0.5) to set the transparency */
-    z-index: 1; /* Make sure the pseudo-element is above the background image */
+    z-index: 0; /* Make sure the pseudo-element is above the background image */
 }
 
 #splash-container {
@@ -243,7 +335,7 @@ a.hyperlink:hover, a.external:hover {
     height: 300px;
     position: absolute;
     padding: 0;
-    z-index:2;
+    z-index: 1;
 }
 
 #splash-text {
@@ -251,6 +343,7 @@ a.hyperlink:hover, a.external:hover {
     font-size: 4.7em;
     position: absolute;
     left: 10px;
+    z-index: 1;
 }
 
 #splash-date {
@@ -260,7 +353,7 @@ a.hyperlink:hover, a.external:hover {
     position: absolute;
     bottom: 0;
     left: 20px;
-    z-index:2;
+    z-index: 1;
 }
 
 #splash-image {
