--- a/main.css
+++ b/main.css
@@ -56,6 +56,149 @@ body {
   }
 }
 
+/*************/
+/* Slideshow */
+/*************/
+
+.carousel {
+    position: fixed;
+    width: 50vw;
+    height: 100vh;
+    margin-right: auto;
+}
+
+ul.slides {
+    display: block;
+    position: relative;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style: none;
+}
+
+.slides * {
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
+
+ul.slides input {
+    display: none; 
+}
+
+
+.slide-container { 
+    display: block; 
+}
+
+.slide-image {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0;
+    transition: all .7s ease-in-out;
+}   
+
+.slide-image img {
+    flex-shrink: 0; /* Prevent image from shrinking */
+    min-width: 100%; /* Ensure the image covers the container */
+    min-height: 100%; /* Ensure the image covers the container */
+    object-fit: cover; /* Cover the container with the image */
+}
+
+.carousel-controls {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    font-size: 100px;
+    line-height: 600px;
+    color: #fff;
+}
+
+.carousel-controls label {
+    display: none;
+    position: absolute;
+    padding: 0 20px;
+    opacity: 0;
+    transition: opacity .2s;
+    cursor: pointer;
+}
+
+.slide-image:hover + .carousel-controls label{
+    opacity: 0.5;
+}
+
+.carousel-controls label:hover {
+    opacity: 1;
+}
+
+.carousel-controls .prev-slide {
+    width: 49%;
+    text-align: left;
+    left: 0;
+}
+
+.carousel-controls .next-slide {
+    width: 49%;
+    text-align: right;
+    right: 0;
+}
+
+.carousel-dots {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    z-index: 999;
+    text-align: center;
+}
+
+.carousel-dots .carousel-dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.5;
+    margin: 10px;
+}
+
+input:checked + .slide-container .slide-image {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 1s ease-in-out;
+}
+
+input:checked + .slide-container .carousel-controls label {
+     display: block; 
+}
+
+input#img-1:checked ~ .carousel-dots label#img-dot-1,
+input#img-2:checked ~ .carousel-dots label#img-dot-2,
+input#img-3:checked ~ .carousel-dots label#img-dot-3,
+input#img-4:checked ~ .carousel-dots label#img-dot-4,
+input#img-5:checked ~ .carousel-dots label#img-dot-5,
+input#img-6:checked ~ .carousel-dots label#img-dot-6 {
+    opacity: 1;
+}
+
+
+input:checked + .slide-container .nav label { display: block; }
+
+@media (max-width: 768px) {
+    .carousel {
+        display: none;
+    }
+}
+
 /******************/
 /* Navigation bar */
 /******************/
@@ -82,6 +225,7 @@ body {
   width: 48px;
   z-index: 3;
   color: var(--main-text-color);
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
 }
 
 /* Menu items */
@@ -370,17 +514,6 @@ a.hyperlink:hover, a.external:hover {
 /* Sections */
 /************/
 
-#portraits {
-    position: fixed;
-    width: 50vw;
-    height: 100vh;
-    margin-right: auto;
-    padding: 5%;
-    background-image: url("assets/shoot/DSC07886.jpeg");
-    background-size: cover;
-    background-position: center;  
-}
-
 .line-box {
     display: flex;
     align-items: center;
@@ -451,9 +584,6 @@ a.hyperlink:hover, a.external:hover {
 }
 
 @media (max-width: 768px) {
-    #portraits {
-        display: none;
-    }
     .page {
         width: 100%;
     }
