--- a/main.css
+++ b/main.css
@@ -103,6 +103,7 @@ ul.slides input {
     top: 0;
     opacity: 0;
     transition: all .7s ease-in-out;
+    justify-content: center;
 }   
 
 .slide-image img {
