--- a/main.css
+++ b/main.css
@@ -636,6 +636,13 @@ span.profile-role {
 	font-weight: 400;
 }
 
+.entourage td.parents {
+	text-align: center;
+	vertical-align: middle;
+	padding: 0;
+	margin: 0;
+}
+
 /**********************/
 /* Schedule of events */
 /**********************/
