--- a/main.css
+++ b/main.css
@@ -455,7 +455,10 @@ a.hyperlink:hover, a.external:hover {
 }
 
 #splash-container {
-	text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Center horizontally */
+    align-items: center;
 	background-color: transparent;
 	width: 300px;
 	height: 300px;
@@ -464,12 +467,31 @@ a.hyperlink:hover, a.external:hover {
 	z-index: 1;
 }
 
-#splash-text {
+.splash-text {
+	display: block;
+	font-family: 'La Belle Aurore', cursive;
+	font-size: 5em;
+	font-variant: normal;
+	font-weight: 400;
 	text-align: center;
-	font-size: 4.7em;
-	position: absolute;
-	left: 10px;
-	z-index: 1;
+	line-height: 0.6em;
+	text-decoration: none;
+	margin: 10px 0;
+	opacity: 0; /* Start with 0 opacity */
+	animation: fadeIn 1s ease-in-out forwards; /* Animation duration and easing */
+}
+
+  /* Apply delay to each line */
+.splash-text:nth-child(1) {
+	animation: fadeIn 1s ease-in-out 0s forwards;
+}
+
+.splash-text:nth-child(2) {
+	animation: fadeIn 1s ease-in-out 0.5s forwards;
+}
+
+.splash-text:nth-child(3) {
+	animation: fadeIn 1s ease-in-out 1s forwards;
 }
 
 #splash-date {
